@@ -2,6 +2,7 @@
 <object name="portal_controlpanel" meta_type="Plone Control Panel Tool">
  <configlet title="GetPaid" action_id="getpaid" appId="PloneGetPaid"
     category="Products" condition_expr=""
+    icon_expr="portal/++resource++getpaid.png"
     url_expr="string:${portal_url}/@@manage-getpaid-overview" visible="True">
   <permission>Manage portal</permission>
  </configlet>
